--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <h1 class="titulo"> Centro De Cidadania LGBT+ </h1>
         </figure>
 
+        <span class="material-symbols-outlined icone sr-only" aria-hidden="true" aria-label="Ícone de menu de navegação">
+            menu
+        </span>
+
         <nav class="nav">
             <ul>
                 <a href="#sobre" aria-label="Ver introdução sobre">
@@ -166,7 +170,7 @@
             </section>
 
             <section class="servicos-parceiros">
-                <h2> Serviços Com Parceria De ... </h2>
+                <h2> Serviços Em Parceria </h2>
 
                 <div class="lista-de-parcerias">
                     <article class="card">
@@ -222,7 +226,7 @@
 
         <aside id="emocionais">
             <p class="rosa">
-                Você é importante
+                Você é super importante
             </p>
 
             <p class="roxa">
