Menu abrível - Parte 1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- JavaScript -->
+    <script src="src/js/menu.js" defer></script>
     <script src="src/js/topo.js" defer></script>
 </head>
 <body>
@@ -24,7 +25,7 @@
             <h1 class="titulo"> Centro De Cidadania LGBT+ </h1>
         </figure>
 
-        <span class="material-symbols-outlined icone sr-only" aria-hidden="true" aria-label="Ícone de menu de navegação">
+        <span class="material-symbols-outlined icone sr-only" id="menu" aria-hidden="true" aria-label="Ícone de menu de navegação" tabindex="0">
             menu
         </span>
 
