--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
                     </ul>
                 </article>
 
-                <figure class="figura">
-                    <img src="src/img/arco-iris-pintado-quadrado.jpg" alt="Foto de arco-íris pintado no chão">
-                </figure>
+                <picture class="figura">
+                    <source media="(max-width: 1200px)" srcset="src/img/arco-iris-pintado-mobile.jpg" type="image/jpg">
+
+                    <img src="src/img/arco-iris-pintado-desktop.jpg" alt="Foto de arco-íris pintado no chão">
+                </picture>
             </section>
         </section>
 
