--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsive.css">
     <!-- Fontes -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- JavaScript -->
     <script src="src/js/menu.js" defer></script>
+    <script src="src/js/btn-contatos.js" defer></script>
     <script src="src/js/topo.js" defer></script>
 </head>
 <body>
@@ -69,7 +70,15 @@
                     Localiza-se no centro de João Pessoa e é bem pertinho da Lagoa
                 </p>
 
-                <a href="https://maps.app.goo.gl/cThhnzZUxE4nPn3W9" aria-label="Ver localização no google maps" target="_blank" rel="external"> Ver Localização </a>
+                <div class="botoes">
+                    <a href="https://maps.app.goo.gl/cThhnzZUxE4nPn3W9" aria-label="Ver localização no google maps" target="_blank" rel="external"> 
+                        ver localização 
+                    </a>
+
+                    <a href="#contatos" aria-label="Ver contatos disponiveis para agendamento" id="btn-contatos"> 
+                        contatar para agendar 
+                    </a>
+                </div>
             </section>
 
             <section class="historia">
