--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                 </article>
 
                 <picture class="figura">
-                    <source media="(max-width: 1200px)" srcset="src/img/arco-iris-pintado-mobile.jpg" type="image/jpg">
+                    <source media="(max-width: 1200px) and (orientation: landscape)" srcset="src/img/arco-iris-pintado-mobile-landscape.jpg" type="image/jpg">
+
+                    <source media="(max-width: 1200px) and (orientation: portrait)" srcset="src/img/arco-iris-pintado-mobile-portrait.jpg" type="image/jpg">
 
                     <img src="src/img/arco-iris-pintado-desktop.jpg" alt="Foto de arco-íris pintado no chão">
                 </picture>
