--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centro De Cidadania LGBT+</title>
+    <meta name="author" content="Enne Jim Pessoa">
+    <meta name="keywords" content="centro, cidadania, lgbt, queer, serviços, órgão, prefeitura, municipal, coordenadoria, oficinas, direitos, acesso, público">
+    <meta name="descrition" content="Conheça esse órgão da prefeitura municipal que é voltado à população LGBT+ a fim de promover um acolhimento humanizado e respeitoso">
+    <title> Centro De Cidadania LGBT+ </title>
     <link rel="shortcut icon" href="src/img/arco-iris.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="src/css/reset.css">
@@ -23,6 +26,7 @@
     <header id="cabecalho">
         <figure class="logo">
             <img src="src/img/arco-iris.png" alt="Ícone do site: arco-íris">
+
             <h1 class="titulo"> Centro De Cidadania LGBT+ </h1>
         </figure>
 
@@ -83,7 +87,7 @@
 
             <section class="historia">
                 <article class="texto">
-                    <h2>História</h2>
+                    <h2> História </h2>
 
                     <ul>
                         <li>
@@ -91,7 +95,7 @@
                         </li>
                         
                         <li>
-                            O espaço reúne inúmeros serviços voltados a população queer visando a garantir os direitos e o acesso às políticas públicas de forma integral, viabilizando a realização de oficinas e de outros serviços.
+                            O espaço reúne inúmeros serviços voltados à população queer visando a garantir os direitos e o acesso às políticas públicas de forma integral, viabilizando a realização de oficinas e de outros serviços.
                         </li>
                     
                         <li>
@@ -116,7 +120,7 @@
                     Horário de funcionamento:
                 </span>
 
-                <span id="dado">
+                <span>
                     De segunda à sexta-feira - 8h às 15h
                 </span>
             </article>
