--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                 </span>
                             </a>
 
-                            <a href="tel:+5583981448264" aria-label="Me contate pelo número de telefone" target="_blank" rel="external">
+                            <a href="https://wa.me/+5583981448264" aria-label="Me contate no Whatsapp pelo número de telefone" target="_blank" rel="external">
                                 <span class="material-symbols-outlined icone sr-only" aria-hidden="true" aria-label="Ícone de telefone whatsapp">
                                     ad_units
                                 </span>
@@ -353,7 +353,7 @@
                             </span>
                         </a>
                         
-                        <a href="tel:+55987306036" aria-label="3º número de whatsapp da recepção" target="_blank" rel="external">
+                        <a href="https://wa.me/+5583987306036" aria-label="3º número de whatsapp da recepção" target="_blank" rel="external">
                             <span class="material-symbols-outlined icone sr-only" aria-hidden="true" aria-label="Ícone de telefone whatsapp">
                                 ad_units
                             </span>
