Mudança de nome
Mudando o nome do site que representa o nome do devido espaço

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Enne Jim Pessoa">
     <meta name="keywords" content="centro, cidadania, lgbt, queer, serviços, órgão, prefeitura, municipal, coordenadoria, oficinas, direitos, acesso, público">
     <meta name="descrition" content="Conheça esse órgão da prefeitura municipal que é voltado à população LGBT+ a fim de promover um acolhimento humanizado e respeitoso">
-    <title> Centro De Cidadania LGBT+ </title>
+    <title> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </title>
     <link rel="shortcut icon" href="src/img/arco-iris.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="src/css/reset.css">
@@ -27,7 +27,7 @@
         <figure class="logo">
             <img src="src/img/arco-iris.png" alt="Ícone do site: arco-íris">
 
-            <h1 class="titulo"> Centro De Cidadania LGBT+ </h1>
+            <h1 class="titulo"> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </h1>
         </figure>
 
         <span class="material-symbols-outlined icone sr-only" id="menu" aria-hidden="true" aria-label="Ícone de menu de navegação" tabindex="0">
@@ -271,7 +271,7 @@
                 <figure class="logo">
                     <img src="src/img/arco-iris.png" alt="Ícone do site: arco-íris">
 
-                    <h1 class="titulo"> Centro De Cidadania LGBT+ </h1>
+                    <h1 class="titulo"> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </h1>
                 </figure>
 
                 <div class="info-add">
