--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="src/css/responsive.css">
     <!-- Fontes -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <!-- JavaScript -->
     <script src="src/js/menu.js" defer></script>
     <script src="src/js/btn-contatos.js" defer></script>
@@ -79,7 +76,7 @@
                         ver localização 
                     </a>
 
-                    <a href="#contatos" aria-label="Ver contatos disponiveis para agendamento" id="btn-contatos"> 
+                    <a href="src/view/joao-pessoa-npm.html" aria-label="Saber como realizar um agendamento" id="btn-contatos"> 
                         contatar para agendar 
                     </a>
                 </div>
