Mudança no meu email

--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
                                 </span>
                             </a>
 
-                            <a href="mailto:ennefofe10@gmail.com" aria-label="Me contate pelo meu email do Google Gmail" target="_blank" rel="external">
+                            <a href="mailto:Enne.Pessoa@gmail.com" aria-label="Me contate pelo meu email do Google Gmail" target="_blank" rel="external">
                                 <span class="material-symbols-outlined icone sr-only" aria-hidden="true" aria-label="Ícone de email">
                                     mail
                                 </span>
 
                                 <span>
-                                    EnneFofe10@gmail.com
+                                    Enne.Pessoa@gmail.com
                                 </span>
                             </a>
                         </ul>
