refactor: project structure

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <meta name="keywords" content="centro, cidadania, lgbt, queer, serviços, órgão, prefeitura, municipal, coordenadoria, oficinas, direitos, acesso, público">
     <meta name="descrition" content="Conheça esse órgão da prefeitura municipal que é voltado à população LGBT+ a fim de promover um acolhimento humanizado e respeitoso">
     <title> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </title>
-    <link rel="shortcut icon" href="src/img/arco-iris.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/arco-iris.png" type="image/x-icon">
     <!-- CSS -->
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/responsive.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- JavaScript -->
-    <script src="src/js/menu.js" defer></script>
-    <script src="src/js/topo.js" defer></script>
+    <script src="js/menu.js" defer></script>
+    <script src="js/topo.js" defer></script>
 </head>
 <body>
     <header id="cabecalho">
         <figure class="logo">
-            <img src="src/img/arco-iris.png" alt="Ícone do site: arco-íris">
+            <img src="img/arco-iris.png" alt="Ícone do site: arco-íris">
 
             <h1 class="titulo"> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </h1>
         </figure>
@@ -78,7 +78,7 @@
                         ver localização 
                     </a>
 
-                    <a href="src/view/joao-pessoa-npm.html" aria-label="Saber como realizar um agendamento" id="btn-contatos"> 
+                    <a href="view/joao-pessoa-npm.html" aria-label="Saber como realizar um agendamento" id="btn-contatos"> 
                         contatar para agendar 
                     </a>
                 </div>
@@ -104,11 +104,11 @@
                 </article>
 
                 <picture class="figura">
-                    <source media="(max-width: 1200px) and (orientation: landscape)" srcset="src/img/arco-iris-pintado-mobile-landscape.jpg" type="image/jpg">
+                    <source media="(max-width: 1200px) and (orientation: landscape)" srcset="img/arco-iris-pintado-mobile-landscape.jpg" type="image/jpg">
 
-                    <source media="(max-width: 1200px) and (orientation: portrait)" srcset="src/img/arco-iris-pintado-mobile-portrait.jpg" type="image/jpg">
+                    <source media="(max-width: 1200px) and (orientation: portrait)" srcset="img/arco-iris-pintado-mobile-portrait.jpg" type="image/jpg">
 
-                    <img src="src/img/arco-iris-pintado-desktop.jpg" alt="Foto de arco-íris pintado no chão">
+                    <img src="img/arco-iris-pintado-desktop.jpg" alt="Foto de arco-íris pintado no chão">
                 </picture>
             </section>
         </section>
@@ -268,7 +268,7 @@
         <section class="logo-info-tell">
             <div class="logo-info">
                 <figure class="logo">
-                    <img src="src/img/arco-iris.png" alt="Ícone do site: arco-íris">
+                    <img src="img/arco-iris.png" alt="Ícone do site: arco-íris">
 
                     <h1 class="titulo"> Coordenadoria de Promoção a Cidadania LGBT+ e Igualdade Racial </h1>
                 </figure>
